<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_box_back"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.navigation.BoxFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_is_the_box_text"
        android:textColor="@color/black"
        android:textSize="@dimen/dimens_25sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_go_back"
        style="@style/box_fragment_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_open_secret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_box" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_open_secret"
        style="@style/box_fragment_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_secret_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_generate_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_generate_number"
        style="@style/box_fragment_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_number_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_open_secret" />


</androidx.constraintlayout.widget.ConstraintLayout>