<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.navigation.SecretFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_this_is_secret_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_is_secret_place"
        android:textColor="@color/white"
        android:textSize="@dimen/dimens_25sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_close_secret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_close_secret"
        style="@style/box_fragment_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_secret"
        app:layout_constraintBottom_toTopOf="@+id/btn_close_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_this_is_secret_place" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_close_all"
        style="@style/box_fragment_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_the_whole_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close_secret" />

</androidx.constraintlayout.widget.ConstraintLayout>